[package]
name = "libzkchannels-toolkit"
version = "0.1.0"
authors = ["Marcella Hastings <marcella@boltlabs.io>", "Shea Leffler <shea@errno.com>"]
edition = "2018"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libzkchannels-crypto = { version = "0.1.0", path = "../libzkchannels-crypto" }
bls12_381 = "0.4.0"
rand_core = "0.6.0"
rand = "0.8.3"
serde = { version = "1", features = ["derive"] }
