[package]
name = "zkabacus-crypto"
version = "0.1.0"
authors = ["Marcella Hastings <marcella@boltlabs.io>", "Shea Leffler <shea@errno.com>", "Kenny Foner <kwf@boltlabs.io"]
edition = "2018"
license = "MIT"

[features]
sqlite = ["bincode", "sqlx", "sqlx/sqlite", "zkchannels-crypto/sqlite"]

[dependencies]
zkchannels-crypto = { version = "0.1.0", path = "../zkchannels-crypto" }
base64 = "0.13.0"
bincode = { version = "1.3.3", optional = true }
bls12_381 = "0.4.0"
ff = "0.9"
rand_core = "0.6.0"
rand = "0.8.3"
serde = { version = "1", features = ["derive"] }
sqlx = { version = "0.5.2", features = ["runtime-tokio-rustls"], optional = true }
thiserror = "1"
sha3 = "0.9.1"
hex = "0.4"