[package]
name = "zkchannels-crypto"
version = "0.1.0"
authors = ["Marcella Hastings <marcella@boltlabs.io>"]
edition = "2018"
license = "MIT"
description = "implementation of a randomizable signature scheme with efficient zero knowledge protocols"

[dependencies]
rust-crypto = "0.2"
arrayvec = "0.7"
bls12_381 = "0.4.0"
ff = "0.9"
group = "0.9"
rand_core = "0.6.0"
rand = "0.8.3"
sha3 = "0.9.1"
thiserror = "1"
serde = "1.0.126"
serde-big-array = { version = "0.3.2", features = ["const-generics"] }
