[package]
name = "zkchannels-crypto"
version = "0.1.0"
authors = ["Marcella Hastings <marcella@boltlabs.io>"]
edition = "2018"
license = "MIT"
description = "implementation of a randomizable signature scheme with efficient zero knowledge protocols"

[features]
sqlite = ["bincode", "sqlx", "sqlx/sqlite"]

[dependencies]
arrayvec = "0.7"
bincode = { version = "1.3.3", optional = true }
bls12_381 = "0.4.0"
ff = "0.9"
group = "0.9"
rand_core = "0.6.0"
rand = "0.8.3"
rust-crypto = "0.2"
hex = "0.4"
serde = { version = "1.0.126", features = ["derive"] }
serde-big-array = { version = "0.3.2", features = ["const-generics"] }
sha3 = "0.9.1"
sqlx = { version = "0.5.2", features = ["runtime-tokio-rustls"], optional = true }
thiserror = "1"
